--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -133,6 +133,16 @@
   text-align: center;
 }
 
+.team-user .user-avatar {
+  width: 80px;
+  height: 80px;
+}
+
+.team-user .user-avatar img {
+  max-width: 80px;
+  max-height: 80px;
+}
+
 .game-information .controls {
   position: absolute;
   right: 0;
@@ -182,10 +192,6 @@
   }
 
   .team-user .user-avatar {
-    display: none;
-  }
-
-  .team-user .user-avatar img {
     display: none;
   }
 
