--- a/public/html/views/games/update.html
+++ b/public/html/views/games/update.html
@@ -13,18 +13,18 @@
                                    on-select="onSelectUser($item)"
                                    on-remove="onRemoveUser($item)"
                                    ng-disabled="disabled" title="Players of Team A">
-                            <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
+                            <ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match>
                             <ui-select-choices repeat="user in usersSearch track by $index"
                                                refresh="findUsers($select.search)"
                                                ui-disable-choice="!user.id"
                                                refresh-delay="0">
-                                <span ng-if="user.id"> <% user.name %> (<% user.email %>)</span>
-                                <span ng-if="!user.id"> <% user.name %></span>
+                                <span ng-if="user.id"> {{ user.name }} ({{ user.email }})</span>
+                                <span ng-if="!user.id"> {{ user.name }}</span>
                             </ui-select-choices>
                         </ui-select>
 
                         <div class="error">
-                            <div ng-repeat="error in errors.games_users_a"><% error %></div>
+                            <div ng-repeat="error in errors.games_users_a">{{ error }}</div>
                         </div>
                     </div>
                 </div>
@@ -34,12 +34,12 @@
                     <div class="col-sm-10">
                         <input id="pointsA" ng-model="game.points.a" type="text" class="form-control"
                                number-only
-                               min="<% game.MIN_POINTS %>"
-                               max="<% game.MAX_POINTS %>"
+                               min="{{ game.MIN_POINTS }}"
+                               max="{{ game.MAX_POINTS }}"
                                ng-required="required"
                                required="required">
                         <div class="error">
-                            <div ng-repeat="error in errors.team_a_points"><% error %></div>
+                            <div ng-repeat="error in errors.team_a_points">{{ error }}</div>
                         </div>
                     </div>
                 </div>
@@ -57,18 +57,18 @@
                                    on-remove="onRemoveUser($item)"
                                    theme="bootstrap" sortable="true"
                                    ng-disabled="disabled"  title="Players of Team B">
-                            <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
+                            <ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match>
                             <ui-select-choices repeat="user in usersSearch track by $index"
                                                refresh="findUsers($select.search)"
                                                ui-disable-choice="!user.id"
                                                refresh-delay="0">
-                                <span ng-if="user.id"> <% user.name %> (<% user.email %>)</span>
-                                <span ng-if="!user.id"> <% user.name %></span>
+                                <span ng-if="user.id"> {{ user.name }} ({{ user.email }})</span>
+                                <span ng-if="!user.id"> {{ user.name }}</span>
                             </ui-select-choices>
                         </ui-select>
 
                         <div class="error">
-                            <div ng-repeat="error in errors.games_users_b"><% error %></div>
+                            <div ng-repeat="error in errors.games_users_b">{{ error }}</div>
                         </div>
                     </div>
                 </div>
@@ -78,12 +78,12 @@
                     <div class="col-sm-10">
                         <input id="pointsB" ng-model="game.points.b" type="text" class="form-control"
                                number-only
-                               min="<% game.MIN_POINTS %>"
-                               max="<% game.MAX_POINTS %>"
+                               min="{{ game.MIN_POINTS }}"
+                               max="{{ game.MAX_POINTS }}"
                                ng-required="required"
                                required="required">
                         <div class="error">
-                            <div ng-repeat="error in errors.team_b_points"><% error %></div>
+                            <div ng-repeat="error in errors.team_b_points">{{ error }}</div>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                         <input type="text" id="playedAt" class="form-control" required="required" ng-model="game.playedAt">
                         <div class="error">
                             <div class="error">
-                                <div ng-repeat="error in errors.played_at"><% error %></div>
+                                <div ng-repeat="error in errors.played_at">{{ error }}</div>
                             </div>
                         </div>
                     </div>
