--- a/resources/assets/less/chart.less
+++ b/resources/assets/less/chart.less
@@ -8,6 +8,10 @@
   color: @color-winner;
 }
 
+.users-chart .current-user td {
+  background-color: rgba(140, 161, 220, 0.45);
+}
+
 /* XS */
 @media (max-width: @screen-xs-max) {
   .user-email {
