[WIP] user's editing.

--- a/public/html/views/admin/users.html
+++ b/public/html/views/admin/users.html
@@ -1,33 +1,1 @@
-<div class="row">
-    <div class="col-md-8 col-md-offset-2 content-wrap">
-        <h3 class="text-center">User's chart</h3>
-        <table class="table table-condensed users-chart edit-users-table">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>Avatar</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Password</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="user in users">
-                <td><% user.id %></td>
-                <td><div class="user-avatar-container"><img ng-src="<% user.avatarUrl() %>" /></div></td>
-                <td>
-                    <input type="text" class="form-control" ng-model="user.name">
-                </td>
-                <td>
-                    <input type="text" class="form-control" ng-model="user.email">
-                </td>
-                <td>
-                    <input type="password" class="form-control" ng-model="user.password">
-                </td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
+<div class=row><div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered content-wrap"><h3 class=text-center>Edit users</h3><table class="table table-condensed users-chart edit-users-table"><thead><tr><th>ID</th><th>Avatar</th><th>Name</th><th>Email</th><th>Password</th><th></th></tr></thead><tbody><tr ng-repeat="user in users"><td>{{ user.id }}</td><td><div class=user-avatar-container><img ng-src="{{ user.avatarUrl() }}"></div></td><td><span ng-show=!user.editing>{{ user.name }}</span> <span ng-show=user.editing><input type=text class=form-control ng-model=user.name><div class=errors><div ng-repeat="error in errors[user.id].name">{{ error }}</div></div></span></td><td><span ng-show=!user.editing>{{ user.email }}</span> <span ng-show=user.editing><input type=text class=form-control ng-model=user.email><div class=errors><div ng-repeat="error in errors[user.id].email">{{ error }}</div></div></span></td><td><input type=password class=form-control ng-model=user.password ng-show=user.editing></td><td><div class=edit-user-controls ng-show=user.editing><a href=javascript:void(0); ng-click=edit(user);><i class="fa fa-check"></i></a> <a href=javascript:void(0); ng-click="user = rollbackEditing(user)"><i class="fa fa-remove"></i></a></div><div ng-show=!user.editing><a href=javascript:void(0); ng-click=beginEditing(user)><i class="fa fa-pencil"></i></a></div></td></tr></tbody></table></div></div>
