--- a/public/html/views/games/index.html
+++ b/public/html/views/games/index.html
@@ -1,97 +1,1 @@
-<div ng-app="kickerApp" ng-controller="GamesCtrl">
-    <div class="row games-container" ng-repeat="game in games">
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered">
-            <div class="game-graphic">
-                <div class="team team-a">
-                    <div class="team-user" ng-repeat="gameUser in game.games_users_a">
-                        <div class="info">
-                            <div class="name">{{ gameUser.user.name }}</div>
-                            <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
-                            </div>
-                            <div>
-                                {{ gameUser.rating_before }}
-                                <i class="fa fa-long-arrow-right"></i>
-                                {{ gameUser.rating_after }}
-                            </div>
-                        </div>
-                        <div class="user-avatar">
-                            <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                            <div class="stat">
-                                <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                                <span class="loses">{{ gameUser.user.count_looses }}</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="result-container">
-                    <div class="versus">VS</div>
-                    <div class="result">
-                        <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
-                        <div class="point">:</div>
-                        <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
-                    </div>
-                </div>
-                <div class="team team-b">
-                    <div class="team-user" ng-repeat="gameUser in game.games_users_b">
-                        <div class="user-avatar">
-                            <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                            <div class="stat">
-                                <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                                <span class="loses">{{ gameUser.user.count_looses }}</span>
-                            </div>
-                        </div>
-                        <div class="info">
-                            <div class="name">{{ gameUser.user.name }}</div>
-                            <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
-                            </div>
-                            <div>
-                                {{ gameUser.rating_before }}
-                                <i class="fa fa-long-arrow-right"></i>
-                                {{ gameUser.rating_after }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="game-information">
-                <div class="controls" ng-if="user.isGuest === false">
-                    <a href="#"
-                       class="btn btn-default btn-xs control-button"
-                       ng-href="#/game/{{ game.id }}/update"
-                       ng-if="user.isAdmin"
-                    ><i class="fa fa-pencil"></i></a>
-                    <a href="#"
-                       ng-href="/game/{{ game.id }}/delete"
-                       class="btn btn-danger btn-xs control-button"
-                       ng-if="user.isAdmin"
-                    ><i class="fa fa-ban"></i></a>
-                    <a href="#"
-                       ng-click="complain(game.id)"
-                       onclick="return false"
-                       class="btn btn-danger btn-xs control-button"
-                       ng-if="user.isUser || user.isAdmin"
-                       tooltip-placement="top"
-                       tooltip-popup-close-delay="1000"
-                       tooltip-trigger="none"
-                       tooltip-is-open="game.tooltipIsVisible"
-                       ng-mouseover="game.tooltipIsVisible = true"
-                       ng-mouseleave="game.tooltipIsVisible = false"
-                       uib-tooltip-html="game.complaintsHtml"
-                    ><i class="fa fa-flag"></i> <span ng-if="game.complaints.length > 0">{{ game.complaints.length }}</span></a>
-                </div>
-                <div class="game-date">Played at: {{ game.played_at }}</div>
-                <div class="additional-info"></div>
-            </div>
-        </div>
-    </div>
-    <div class="row games-pages" ng-if="currentpage < lastpage">
-        <button class="btn btn-primary" ng-if="loading" disabled="disabled">
-            <span><i class="fa fa-refresh fa-spin"></i></span> more...
-        </button>
-        <button class="btn btn-primary" ng-if="loading === false" ng-click="loadMore()">
-            <span><i class="fa fa-refresh"></i></span> more...
-        </button>
-    </div>
-</div>
+<div ng-app=kickerApp ng-controller=GamesCtrl><div class="row games-container" ng-repeat="game in games"><div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered"><div class=game-graphic><div class="team team-a"><div class=team-user ng-repeat="gameUser in game.games_users_a"><div class=info><div class=name>{{ gameUser.user.name }}</div><div class="rating-delta {{ gameUser.userPointsClass() }}">{{ gameUser.getDelta() }} points</div><div>{{ gameUser.rating_before }} <i class="fa fa-long-arrow-right"></i> {{ gameUser.rating_after }}</div></div><div class=user-avatar><img ng-src="{{ gameUser.user.avatarUrl() }}"><div class=stat><span class=wins>{{ gameUser.user.count_wins }}</span> / <span class=loses>{{ gameUser.user.count_looses }}</span></div></div></div></div><div class=result-container><div class=versus>VS</div><div class=result><div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>&thinsp;<div class=point>:</div>&thinsp;<div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div></div></div><div class="team team-b"><div class=team-user ng-repeat="gameUser in game.games_users_b"><div class=user-avatar><img ng-src="{{ gameUser.user.avatarUrl() }}"><div class=stat><span class=wins>{{ gameUser.user.count_wins }}</span> / <span class=loses>{{ gameUser.user.count_looses }}</span></div></div><div class=info><div class=name>{{ gameUser.user.name }}</div><div class="rating-delta {{ gameUser.userPointsClass() }}">{{ gameUser.getDelta() }} points</div><div>{{ gameUser.rating_before }} <i class="fa fa-long-arrow-right"></i> {{ gameUser.rating_after }}</div></div></div></div></div><div class=game-information><div class=controls ng-if="user.isGuest === false"><a href=# class="btn btn-default btn-xs control-button" ng-href="#/game/{{ game.id }}/update" ng-if=user.isAdmin><i class="fa fa-pencil"></i></a> <a href=# ng-href="/game/{{ game.id }}/delete" class="btn btn-danger btn-xs control-button" ng-if=user.isAdmin><i class="fa fa-ban"></i></a> <a href=# ng-click=complain(game.id) onclick="return false" class="btn btn-danger btn-xs control-button" ng-if="user.isUser || user.isAdmin" tooltip-placement=top tooltip-popup-close-delay=1000 tooltip-trigger=none tooltip-is-open=game.tooltipIsVisible ng-mouseover="game.tooltipIsVisible = true" ng-mouseleave="game.tooltipIsVisible = false" uib-tooltip-html=game.complaintsHtml><i class="fa fa-flag"></i> <span ng-if="game.complaints.length > 0">{{ game.complaints.length }}</span></a></div><div class=game-date>Played at: {{ game.played_at }}</div><div class=additional-info></div></div></div></div><div class="row games-pages" ng-if="currentpage < lastpage"><button class="btn btn-primary" ng-if=loading disabled><span><i class="fa fa-refresh fa-spin"></i></span> more...</button> <button class="btn btn-primary" ng-if="loading === false" ng-click=loadMore()><span><i class="fa fa-refresh"></i></span> more...</button></div></div>
