--- a/public/html/views/auth/signin.html
+++ b/public/html/views/auth/signin.html
@@ -1,26 +1,1 @@
-<div class="alert alert-danger sign-errors" ng-if="errors.length > 0">
-    <div ng-repeat="error in errors">{{ error }}</div>
-</div>
-
-<form class="form-sign" method="POST" action="/signin">
-    <h2 class="form-sign-heading">Please sign in</h2>
-    <a href="/fb/signin" class="sign-with">Sign up with Facebook</a>
-    <div class="sign-choices">OR</div>
-
-    <div class="form-inputs">
-        <div class="form-group">
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" ng-model="user.email"
-                   placeholder="Email address" required>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" ng-model="user.password"
-                   placeholder="Password" required>
-        </div>
-    </div>
-
-    <div class="sign-controls">
-        <button class="btn btn-lg btn-primary btn-block" type="button" ng-click="signin(user)">Sign in</button>
-    </div>
-</form>
+<div class="alert alert-danger sign-errors" ng-if="errors.length > 0"><div ng-repeat="error in errors">{{ error }}</div></div><form class=form-sign method=POST action=/signin><h2 class=form-sign-heading>Please sign in</h2><a href=/fb/signin class=sign-with>Sign up with Facebook</a><div class=sign-choices>OR</div><div class=form-inputs><div class=form-group><label for=inputEmail class=sr-only>Email address</label> <input type=email id=inputEmail class=form-control ng-model=user.email placeholder="Email address" required></div><div class=form-group><label for=inputPassword class=sr-only>Password</label> <input type=password id=inputPassword class=form-control ng-model=user.password placeholder=Password required></div></div><div class=sign-controls><button class="btn btn-lg btn-primary btn-block" type=button ng-click=signin(user)>Sign in</button></div></form>
