--- a/public/html/views/games/update.html
+++ b/public/html/views/games/update.html
@@ -1,117 +1,1 @@
-<div class="row">
-    <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered create-game-container">
-        <form class="form-horizontal">
-            <div class="team">
-                <div class="team-title">Team A</div>
-                <div class="form-group">
-                    <label for="usersA" class="col-sm-2 control-label">Players</label>
-                    <div class="col-sm-10">
-                        <ui-select multiple id="usersA"
-                                   ng-model="game.users.a"
-                                   theme="bootstrap" sortable="true"
-                                   limit="2"
-                                   on-select="onSelectUser($item)"
-                                   on-remove="onRemoveUser($item)"
-                                   ng-disabled="disabled" title="Players of Team A">
-                            <ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match>
-                            <ui-select-choices repeat="user in usersSearch track by $index"
-                                               refresh="findUsers($select.search)"
-                                               ui-disable-choice="!user.id"
-                                               refresh-delay="0">
-                                <span ng-if="user.id"> {{ user.name }} ({{ user.email }})</span>
-                                <span ng-if="!user.id"> {{ user.name }}</span>
-                            </ui-select-choices>
-                        </ui-select>
-
-                        <div class="error">
-                            <div ng-repeat="error in errors.games_users_a">{{ error }}</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="pointsA" class="col-sm-2 control-label">Points</label>
-                    <div class="col-sm-10">
-                        <input id="pointsA" ng-model="game.points.a" type="text" class="form-control"
-                               number-only
-                               min="{{ game.MIN_POINTS }}"
-                               max="{{ game.MAX_POINTS }}"
-                               ng-required="required"
-                               required="required">
-                        <div class="error">
-                            <div ng-repeat="error in errors.team_a_points">{{ error }}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team">
-                <div class="team-title">Team B</div>
-                <div class="form-group">
-                    <label for="usersB" class="col-sm-2 control-label">Players</label>
-                    <div class="col-sm-10">
-                        <ui-select multiple id="usersB"
-                                   ng-model="game.users.b"
-                                   limit="2"
-                                   on-select="onSelectUser($item)"
-                                   on-remove="onRemoveUser($item)"
-                                   theme="bootstrap" sortable="true"
-                                   ng-disabled="disabled"  title="Players of Team B">
-                            <ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match>
-                            <ui-select-choices repeat="user in usersSearch track by $index"
-                                               refresh="findUsers($select.search)"
-                                               ui-disable-choice="!user.id"
-                                               refresh-delay="0">
-                                <span ng-if="user.id"> {{ user.name }} ({{ user.email }})</span>
-                                <span ng-if="!user.id"> {{ user.name }}</span>
-                            </ui-select-choices>
-                        </ui-select>
-
-                        <div class="error">
-                            <div ng-repeat="error in errors.games_users_b">{{ error }}</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="pointsB" class="col-sm-2 control-label">Points</label>
-                    <div class="col-sm-10">
-                        <input id="pointsB" ng-model="game.points.b" type="text" class="form-control"
-                               number-only
-                               min="{{ game.MIN_POINTS }}"
-                               max="{{ game.MAX_POINTS }}"
-                               ng-required="required"
-                               required="required">
-                        <div class="error">
-                            <div ng-repeat="error in errors.team_b_points">{{ error }}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="team">
-                <hr>
-                <div class="form-group">
-                    <label for="playedAt" class="col-sm-2 control-label">Date</label>
-                    <div class="col-sm-10">
-                        <input type="text" id="playedAt" class="form-control" required="required" ng-model="game.playedAt">
-                        <div class="error">
-                            <div class="error">
-                                <div ng-repeat="error in errors.played_at">{{ error }}</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="text-center">
-                <button class="btn btn-primary" type="button" ng-click="update()" ng-if="loading === false">
-                    Save
-                </button>
-                <button class="btn btn-primary" type="button" ng-if="loading" disabled="disabled">
-                    <span><i class="fa fa-refresh fa-spin"></i></span> Saving ...
-                </button>
-            </div>
-        </form>
-    </div>
-</div>
+<div class=row><div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered create-game-container"><form class=form-horizontal><div class=team><div class=team-title>Team A</div><div class=form-group><label for=usersA class="col-sm-2 control-label">Players</label><div class=col-sm-10><ui-select multiple id=usersA ng-model=game.users.a theme=bootstrap sortable=true limit=2 on-select=onSelectUser($item) on-remove=onRemoveUser($item) ng-disabled=disabled title="Players of Team A"><ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match><ui-select-choices repeat="user in usersSearch track by $index" refresh=findUsers($select.search) ui-disable-choice=!user.id refresh-delay=0><span ng-if=user.id>{{ user.name }} ({{ user.email }})</span> <span ng-if=!user.id>{{ user.name }}</span></ui-select-choices></ui-select><div class=error><div ng-repeat="error in errors.games_users_a">{{ error }}</div></div></div></div><div class=form-group><label for=pointsA class="col-sm-2 control-label">Points</label><div class=col-sm-10><input id=pointsA ng-model=game.points.a type=text class=form-control number-only min="{{ game.MIN_POINTS }}" max="{{ game.MAX_POINTS }}" ng-required=required required><div class=error><div ng-repeat="error in errors.team_a_points">{{ error }}</div></div></div></div></div><div class=team><div class=team-title>Team B</div><div class=form-group><label for=usersB class="col-sm-2 control-label">Players</label><div class=col-sm-10><ui-select multiple id=usersB ng-model=game.users.b limit=2 on-select=onSelectUser($item) on-remove=onRemoveUser($item) theme=bootstrap sortable=true ng-disabled=disabled title="Players of Team B"><ui-select-match placeholder="Select players...">{{ $item.name }}</ui-select-match><ui-select-choices repeat="user in usersSearch track by $index" refresh=findUsers($select.search) ui-disable-choice=!user.id refresh-delay=0><span ng-if=user.id>{{ user.name }} ({{ user.email }})</span> <span ng-if=!user.id>{{ user.name }}</span></ui-select-choices></ui-select><div class=error><div ng-repeat="error in errors.games_users_b">{{ error }}</div></div></div></div><div class=form-group><label for=pointsB class="col-sm-2 control-label">Points</label><div class=col-sm-10><input id=pointsB ng-model=game.points.b type=text class=form-control number-only min="{{ game.MIN_POINTS }}" max="{{ game.MAX_POINTS }}" ng-required=required required><div class=error><div ng-repeat="error in errors.team_b_points">{{ error }}</div></div></div></div></div><div class=team><hr><div class=form-group><label for=playedAt class="col-sm-2 control-label">Date</label><div class=col-sm-10><input type=text id=playedAt class=form-control required ng-model=game.playedAt><div class=error><div class=error><div ng-repeat="error in errors.played_at">{{ error }}</div></div></div></div></div></div><div class=text-center><button class="btn btn-primary" type=button ng-click=update() ng-if="loading === false">Save</button> <button class="btn btn-primary" type=button ng-if=loading disabled><span><i class="fa fa-refresh fa-spin"></i></span> Saving ...</button></div></form></div></div>
