--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -27,8 +27,8 @@
                 <div class="result-container">
                     <div class="versus">VS</div>
                     <div class="result">
-                        <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
-                        <div class="point">:</div>
+                        <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>&thinsp;
+                        <div class="point">:</div>&thinsp;
                         <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
                     </div>
                 </div>
