--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -27,6 +27,10 @@
   vertical-align: top;
 }
 
+.result-container.additional {
+  display: none;
+}
+
 .team-user > * {
   display: inline-block;
   vertical-align: middle;
@@ -134,13 +138,19 @@
 }
 
 .team-user .user-avatar {
-  width: 80px;
-  height: 80px;
+  vertical-align: middle;
+  border-radius: @avatar-border-radius;
+  -webkit-border-radius: @avatar-border-radius;
+  -moz-border-radius: @avatar-border-radius;
+  width: @avatar-max-size;
+  height: @avatar-max-size;
 }
 
 .team-user .user-avatar img {
-  max-width: 80px;
-  max-height: 80px;
+  max-width: @avatar-max-size;
+  max-height: @avatar-max-size;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 
 .game-information .controls {
@@ -195,7 +205,7 @@
 }
 
 /* XS */
-@media (max-device-width: @screen-xs-max) {
+@media (max-width: @screen-xs-max) {
   .game-graphic {
     display: block;
   }
@@ -205,26 +215,82 @@
     padding: 2em 0 2em;
   }
 
-  .result-container {
-    padding-left: 0;
+  .result-container.main {
+    display: none;
+  }
+
+  .result-container.additional {
+    display: block;
+    padding-top: 0;
+  }
+
+  .game-information {
+    padding-top: 0;
+  }
+
+  .game-information .game-date {
+    margin-top: 10px;
+  }
+
+  .game-graphic .name {
+    width: 100px;
+    white-space: nowrap;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+  }
+
+  .team-a .info {
     padding-right: 0;
   }
 
-  .game-graphic .team-user {
-    width: 100px;
+  .team-b .info {
+    padding-left: 0;
   }
 
   .team-user .user-avatar {
-    display: none;
+    width: @little-avatar-max-size;
+    height: @little-avatar-max-size;
+  }
+
+  .team-user .user-avatar img {
+    max-width: @little-avatar-max-size;
+    max-height: @little-avatar-max-size;
   }
 
   .game-information .controls {
     bottom: 0;
   }
+
+  .game-graphic .team-b {
+    padding-left: 10px;
+  }
+
+  .game-graphic .team-a {
+    padding-right: 10px;
+  }
 }
 
+/* XXS */
+@media (max-width: @screen-xxs-max) {
+  .game-graphic .name {
+    width: 80px;
+    white-space: nowrap;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+  }
+
+  .game-graphic .team-b {
+    padding-left: 10px;
+  }
+
+  .game-graphic .team-a {
+    padding-right: 10px;
+  }
+}
+
+
 /* SM */
-@media (min-device-width: @screen-sm-min) {
+@media (min-width: @screen-sm-min) {
   .game-graphic {
     display: block;
   }
@@ -240,7 +306,7 @@
 }
 
 /* MD */
-@media (min-device-width: @screen-md-min) {
+@media (min-width: @screen-md-min) {
   .game-graphic {
     display: inline-block;
   }
@@ -255,7 +321,7 @@
 }
 
 /* LG */
-@media (min-device-width: @screen-lg-min) {
+@media (min-width: @screen-lg-min) {
   .game-information {
     display: table-cell;
   }
