Match result on medium and large screens fix width.

--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -319,6 +319,10 @@
     display: table-cell;
   }
 
+  .result-container.main .result {
+    width: 55px;
+  }
+
   .game-information .controls {
     top: 0;
   }
