Some design fixes.

--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -243,11 +243,11 @@
   }
 
   .team-a .info {
-    padding-right: 0;
+    padding-right: 5px;
   }
 
   .team-b .info {
-    padding-left: 0;
+    padding-left: 5px;
   }
 
   .team-user .user-avatar {
