--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -136,7 +136,7 @@
   text-align: center;
 }
 
-.team-user .user-avatar {
+.user-avatar {
   vertical-align: middle;
   border-radius: @avatar-border-radius;
   -webkit-border-radius: @avatar-border-radius;
@@ -145,7 +145,7 @@
   height: @avatar-max-size;
 }
 
-.team-user .user-avatar img {
+.user-avatar img {
   max-width: @avatar-max-size;
   max-height: @avatar-max-size;
   opacity: 0;
