[WIP] New design

--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -1,6 +1,6 @@
 <div ng-app="kickerApp" ng-controller="GamesCtrl">
-    <div class="row games-container" ng-repeat="game in games">
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered">
+    <div class="row" ng-repeat="game in games">
+        <div class="col-xs-12 col-sm-12 col-md-9  game-container col-centered">
             <div class="game-graphic">
                 <div class="team team-a">
                     <div class="team-user" ng-repeat="gameUser in game.games_users_a">
@@ -8,7 +8,7 @@
                             <!--<img ng-src="{{ gameUser.user.avatarUrl() }}" style="max-height: 40px; position: absolute; left: 0" />-->
                             <div class="name">{{ gameUser.user.name }}</div>
                             <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
+                                {{ gameUser.getDelta() }}
                             </div>
                             <div>
                                 {{ gameUser.rating_before }}
@@ -44,8 +44,8 @@
                         </div>
                         <div class="info">
                             <div class="name">{{ gameUser.user.name }}</div>
-                            <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
+                            <div class="rating-delta {{ gameUser.userPointsClass() }}" ng-class="{'negative': gameUser.getDelta()<0}">
+                                {{ gameUser.getDelta() }}
                             </div>
                             <div>
                                 {{ gameUser.rating_before }}
@@ -94,7 +94,8 @@
                         <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
                     </div>
                 </div>
-                <div class="game-date">Played at: {{ game.played_at }}</div>
+                <div class="game-date-text">Played at:</div>
+                <div class="game-date"> {{ game.played_at }}</div>
                 <div class="additional-info"></div>
             </div>
         </div>
