--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -1,7 +1,7 @@
 @import "variables";
 
 body {
-  background-color: #eee;
+  background: #E4E4E4 url("../img/noise-bg.png");
   font-family: TitilliumText, Helvetica, Arial, sans-serif;
 }
 
