--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -9,6 +9,7 @@
 .navbar {
   min-height: 2em;
   margin-bottom: 0;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .navbar.navbar-center .navbar-nav {
@@ -29,4 +30,13 @@
   .navbar-collapse * {
     font-size: 18px;
   }
+}
+
+.navbar-default .navbar-nav > li > a{
+  text-transform: uppercase;
+  font-weight: bold;
+  -webkit-transition: all 400ms cubic-bezier(0.215, 0.61, 0.365, 0.95) 5ms;
+  -moz-transition: all 400ms cubic-bezier(0.215, 0.61, 0.365, 0.95) 5ms;
+  -o-transition: all 400ms cubic-bezier(0.215, 0.61, 0.365, 0.95) 5ms;
+  transition: all 400ms cubic-bezier(0.215, 0.61, 0.365, 0.95) 5ms;
 }
