Profile editing has been added.

--- a/resources/assets/less/profile.less
+++ b/resources/assets/less/profile.less
@@ -1,7 +1,7 @@
 @import "variables";
 
-table.user-profile-table th {
-  text-align: right;
+table.user-profile-table th * {
+  float: right;
 }
 
 .user-profile .user-avatar-container {
