--- a/resources/assets/app/views/user/profile.html
+++ b/resources/assets/app/views/user/profile.html
@@ -7,46 +7,48 @@
         </div>
 
         <form class="form-horizontal">
-            <table class="table user-profile-table">
-                <tbody>
-                <tr>
-                    <th><label for="inputEmail3" class="col-sm-2 control-label">Email</label></th>
-                    <td>
-                        <input type="text" class="form-control" ng-model="player.name">
-                        <div class="errors">
-                            <div ng-repeat="error in errors[user.id].name">
-                                {{ error }}
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th>email</th>
-                    <td>
-                        <input type="text" class="form-control" ng-model="player.email">
-                        <div class="errors">
-                            <div ng-repeat="error in errors[user.id].email">
-                                {{ error }}
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th>Password</th>
-                    <td>
-                        <input type="password" class="form-control" ng-model="player.password">
-                        <div class="errors">
-                            <div ng-repeat="error in errors[user.id].password">
-                                {{ error }}
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="form-group">
+                <div class="col-sm-5 text-right">
+                    <label for="name" class="control-label">Name</label>
+                </div>
+                <div class="col-sm-5">
+                    <input id="name" type="text" class="form-control" ng-model="player.name">
+                    <div class="errors" ng-repeat="error in errors.name">
+                        {{ error }}
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-5 text-right">
+                    <label for="email" class="control-label">Email</label>
+                </div>
+                <div class="col-sm-5">
+                    <input id="email" type="text" class="form-control" ng-model="player.email">
+                    <div class="errors" ng-repeat="error in errors.email">
+                        {{ error }}
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-5 text-right">
+                    <label for="password" class="control-label">Password</label>
+                </div>
+                <div class="col-sm-5">
+                    <input id="password" type="password" class="form-control" placeholder="Fill to change..." ng-model="player.password">
+                    <div class="errors" ng-repeat="error in errors.password">
+                        {{ error }}
+                    </div>
+                </div>
+            </div>
         </form>
+
         <div class="text-center">
-            <button class="btn btn-primary">Save</button>
+            <button class="btn btn-primary" ng-click="saveChanges(player)" ng-disabled="loading">
+                <span ng-show="loading"><i class="fa fa-refresh fa-spin"></i>&nbsp;</span>
+                Save
+            </button>
         </div>
     </div>
 </div>
