--- a/resources/assets/less/profile.less
+++ b/resources/assets/less/profile.less
@@ -14,6 +14,12 @@ table.user-profile-table th * {
 
 .user-profile .user-avatar-container .user-avatar {
   margin: 0 auto;
+  cursor: pointer;
+}
+
+.user-profile .user-avatar-container .user-avatar:hover {
+  opacity: 0.5;
+  transition-duration: 400ms;
 }
 
 table.user-profile-table th, table.user-profile-table tr {
