--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -5,6 +5,18 @@ body {
   font-family: TitilliumText, Helvetica, Arial, sans-serif;
 }
 
+.animate-show {
+  opacity: 1;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  opacity: 0;
+}
+
 .col-centered {
   float: none;
   margin: 0 auto;
