Win rate is displayed in per cents

--- a/resources/assets/app/views/chart/index.html
+++ b/resources/assets/app/views/chart/index.html
@@ -22,7 +22,7 @@
                 <th>
                     <a href="#" onclick="return false;"
                        ng-click="orderByField = 'win_rate'; reverseSort = !reverseSort">
-                        <span class="normal-text">Win Rate</span>
+                        <span class="normal-text">Win Rate (%)</span>
                         <span class="collapsed-text">WR</span>
                     </a>
                 </th>
