User's games filtering added.

--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -210,6 +210,10 @@
   text-overflow: ellipsis;
 }
 
+.filter-item {
+  margin-left: 15px;
+}
+
 /* XS */
 @media (max-width: @screen-xs-max) {
   .game-graphic {
