--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -1,118 +1,132 @@
-<div ng-app="kickerApp" ng-controller="GamesCtrl">
-    <div class="row games-container" ng-repeat="game in games">
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered">
-            <div class="game-graphic">
-                <div class="team team-a">
-                    <div class="team-user" ng-repeat="gameUser in game.games_users_a">
-                        <div class="info">
-                            <!--<img ng-src="{{ gameUser.user.avatarUrl() }}" style="max-height: 40px; position: absolute; left: 0" />-->
-                            <div class="name">{{ gameUser.user.name }}</div>
-                            <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
-                            </div>
-                            <div>
-                                {{ gameUser.rating_before }}
-                                <i class="fa fa-long-arrow-right"></i>
-                                {{ gameUser.rating_after }}
-                            </div>
-                        </div>
-                        <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
-                            <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                            <div class="stat">
-                                <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                                <span class="loses">{{ gameUser.user.count_looses }}</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="result-container main">
-                    <div class="versus">VS</div>
-                    <div class="result">
-                        <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
-                        <div class="point">&thinsp;:&thinsp;</div>
-                        <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
-                    </div>
-                </div>
-                <div class="team team-b">
-                    <div class="team-user" ng-repeat="gameUser in game.games_users_b">
-                        <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
-                            <img ng-src="{{ gameUser.user.avatarUrl() }}" />
-                            <div class="stat">
-                                <span class="wins">{{ gameUser.user.count_wins }}</span> /
-                                <span class="loses">{{ gameUser.user.count_looses }}</span>
-                            </div>
-                        </div>
-                        <div class="info">
-                            <div class="name">{{ gameUser.user.name }}</div>
-                            <div class="rating-delta {{ gameUser.userPointsClass() }}">
-                                {{ gameUser.getDelta() }} points
-                            </div>
-                            <div>
-                                {{ gameUser.rating_before }}
-                                <i class="fa fa-long-arrow-right"></i>
-                                {{ gameUser.rating_after }}
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class="row games-container" ng-show="user.isAdmin || user.isUser">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered">
+        <div class="col-md-4">
+            <div class="material-switch pull-left">
+                <input id="someSwitchOptionDefault" name="someSwitchOption001" type="checkbox"
+                       ng-model="gamesRepository.filters.usersGames"
+                       ng-change="gamesRepository.load(true)"/>
+                <label for="someSwitchOptionDefault" class="label-default"></label>
             </div>
-            <div class="game-information">
-                <div class="controls" ng-if="user.isGuest === false">
-                    <a href="#"
-                       class="btn btn-default btn-xs control-button"
-                       ng-href="#/game/{{ game.id }}/update"
-                       ng-if="user.isAdmin"
-                    ><i class="fa fa-pencil"></i></a>
-                    <a href="#"
-                       ng-href="/game/{{ game.id }}/delete"
-                       class="btn btn-danger btn-xs control-button"
-                       ng-if="user.isAdmin"
-                    ><i class="fa fa-ban"></i></a>
-                    <a href="#"
-                       ng-click="game.loading === false ? complain(game.id) : false"
-                       onclick="return false"
-                       class="btn btn-danger btn-xs control-button"
-                       ng-if="user.isUser || user.isAdmin"
-                       ng-disabled="game.loading"
-                       tooltip-placement="top"
-                       tooltip-popup-close-delay="2000"
-                       tooltip-trigger="none"
-                       tooltip-is-open="game.tooltipIsVisible"
-                       ng-mouseover="game.tooltipIsVisible = true"
-                       ng-mouseleave="game.tooltipIsVisible = false"
-                       uib-tooltip-html="game.complaintsHtml"
-                    >
-                        <i class="fa fa-refresh fa-spin" ng-show="game.loading"></i>
-                        <i class="fa fa-flag" ng-hide="game.loading"></i>
-                        <span ng-if="game.complaints.length > 0">{{ game.complaints.length }}</span>
-                    </a>
-                </div>
-                <div class="result-container additional">
-                    <div class="result">
-                        <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
-                        <div class="point">&thinsp;:&thinsp;</div>
-                        <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
-                    </div>
-                </div>
-                <div class="game-date">Played at: {{ game.played_at }}</div>
-                <div class="additional-info"></div>
+            <div class="filter-item pull-left">
+                Show only my games
             </div>
         </div>
     </div>
-    <div class="row" ng-show="!gamesRepository.loading && games.length <= 0">
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 col-centered content-wrap text-center">
-            <div>There is no games yet...</div>
-            <div ng-show="user.isAdmin || user.isUser">
-                Go ahead and <a href="#/game/create/">add new one</a>!
+</div>
+
+<div class="row games-container" ng-repeat="game in games">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 game-container col-centered">
+        <div class="game-graphic">
+            <div class="team team-a">
+                <div class="team-user" ng-repeat="gameUser in game.games_users_a">
+                    <div class="info">
+                        <!--<img ng-src="{{ gameUser.user.avatarUrl() }}" style="max-height: 40px; position: absolute; left: 0" />-->
+                        <div class="name">{{ gameUser.user.name }}</div>
+                        <div class="rating-delta {{ gameUser.userPointsClass() }}">
+                            {{ gameUser.getDelta() }} points
+                        </div>
+                        <div>
+                            {{ gameUser.rating_before }}
+                            <i class="fa fa-long-arrow-right"></i>
+                            {{ gameUser.rating_after }}
+                        </div>
+                    </div>
+                    <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
+                        <img ng-src="{{ gameUser.user.avatarUrl() }}" />
+                        <div class="stat">
+                            <span class="wins">{{ gameUser.user.count_wins }}</span> /
+                            <span class="loses">{{ gameUser.user.count_looses }}</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="result-container main">
+                <div class="versus">VS</div>
+                <div class="result">
+                    <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
+                    <div class="point">&thinsp;:&thinsp;</div>
+                    <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
+                </div>
+            </div>
+            <div class="team team-b">
+                <div class="team-user" ng-repeat="gameUser in game.games_users_b">
+                    <div class="user-avatar" back-img="{{ gameUser.user.avatarUrl() }}">
+                        <img ng-src="{{ gameUser.user.avatarUrl() }}" />
+                        <div class="stat">
+                            <span class="wins">{{ gameUser.user.count_wins }}</span> /
+                            <span class="loses">{{ gameUser.user.count_looses }}</span>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <div class="name">{{ gameUser.user.name }}</div>
+                        <div class="rating-delta {{ gameUser.userPointsClass() }}">
+                            {{ gameUser.getDelta() }} points
+                        </div>
+                        <div>
+                            {{ gameUser.rating_before }}
+                            <i class="fa fa-long-arrow-right"></i>
+                            {{ gameUser.rating_after }}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="game-information">
+            <div class="controls" ng-if="user.isGuest === false">
+                <a href="#"
+                   class="btn btn-default btn-xs control-button"
+                   ng-href="#/game/{{ game.id }}/update"
+                   ng-if="user.isAdmin"
+                ><i class="fa fa-pencil"></i></a>
+                <a href="#"
+                   ng-href="/game/{{ game.id }}/delete"
+                   class="btn btn-danger btn-xs control-button"
+                   ng-if="user.isAdmin"
+                ><i class="fa fa-ban"></i></a>
+                <a href="#"
+                   ng-click="game.loading === false ? complain(game.id) : false"
+                   onclick="return false"
+                   class="btn btn-danger btn-xs control-button"
+                   ng-if="user.isUser || user.isAdmin"
+                   ng-disabled="game.loading"
+                   tooltip-placement="top"
+                   tooltip-popup-close-delay="2000"
+                   tooltip-trigger="none"
+                   tooltip-is-open="game.tooltipIsVisible"
+                   ng-mouseover="game.tooltipIsVisible = true"
+                   ng-mouseleave="game.tooltipIsVisible = false"
+                   uib-tooltip-html="game.complaintsHtml"
+                >
+                    <i class="fa fa-refresh fa-spin" ng-show="game.loading"></i>
+                    <i class="fa fa-flag" ng-hide="game.loading"></i>
+                    <span ng-if="game.complaints.length > 0">{{ game.complaints.length }}</span>
+                </a>
+            </div>
+            <div class="result-container additional">
+                <div class="result">
+                    <div class="point {{ game.gamePointClass() }}">{{ game.team_a_points }}</div>
+                    <div class="point">&thinsp;:&thinsp;</div>
+                    <div class="point {{ game.gamePointClass('b') }}">{{ game.team_b_points }}</div>
+                </div>
+            </div>
+            <div class="game-date">Played at: {{ game.played_at }}</div>
+            <div class="additional-info"></div>
+        </div>
     </div>
-    <div class="row games-pages" ng-show="gamesRepository.currentpage < gamesRepository.lastpage">
-        <button class="btn btn-primary" ng-if="gamesRepository.loading" disabled="disabled">
-            <span><i class="fa fa-refresh fa-spin"></i></span> more...
-        </button>
-        <button class="btn btn-primary" ng-if="gamesRepository.loading === false" ng-click="gamesRepository.load()">
-            <span><i class="fa fa-refresh"></i></span> more...
-        </button>
+</div>
+<div class="row" ng-show="!gamesRepository.loading && games.length <= 0">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-6 col-centered content-wrap text-center">
+        <div>There is no games yet...</div>
+        <div ng-show="user.isAdmin || user.isUser">
+            Go ahead and <a href="#/game/create/">add new one</a>!
+        </div>
     </div>
+</div>
+<div class="row games-pages" ng-show="gamesRepository.currentpage < gamesRepository.lastpage">
+    <button class="btn btn-primary" ng-if="gamesRepository.loading" disabled="disabled">
+        <span><i class="fa fa-refresh fa-spin"></i></span> more...
+    </button>
+    <button class="btn btn-primary" ng-if="gamesRepository.loading === false" ng-click="gamesRepository.load()">
+        <span><i class="fa fa-refresh"></i></span> more...
+    </button>
 </div>
