Image size validation rules added.

--- a/resources/assets/app/views/user/profile.html
+++ b/resources/assets/app/views/user/profile.html
@@ -3,7 +3,7 @@
         <div class="user-avatar-container">
             <div class="user-avatar preload"
                  back-img="{{ player.avatar_url ? player.avatar_url : '/img/no-avatar.min.png'}}"
-                 ngf-drop ngf-select ng-model="avatar"
+                 ngf-select ng-model="avatar"
             >
                 <img ng-src="{{ player.avatar_url ? player.avatar_url : '/img/no-avatar.min.png'}}" />
             </div>
