--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -41,6 +41,9 @@
 @avatar-border-radius: @avatar-max-size;
 @little-avatar-max-size: 45px;
 
-@color-winner: #8ca1dc;
-@color-loser: #c90000;
+@rating-delta-size: 32px;
+
+@color-separator: #e8e8e8;
+@color-winner: rgb(61, 78, 156);
+@color-loser: #c01935;
 @color-error: #c90000;
